# pyjiminy

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.rst  setup.cfg
.devcontainer/: devcontainer.json
src/pyjiminy/: __init__.py  core.py  helper.py  mail.py  scraper.py  settings.py
src/pyjiminy/yaml/: config.yml
