[metadata]
name = pyjiminy
version = attr: pyjiminy.__version__
author = ksn
author_email = kusano.wireless@gmail.com
maintainer = nm7-jp
maintainer_email = kusano.wireless@gmail.com
description = A simple framework for building complex web applications.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
package_dir = = src
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    selenium 
    pyfields
    pyaml
    python-dotenv
    click
    pandas

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=3
    coverage
    tox

[options.entry_points]
console_scripts =
    pyjiminy = pyjiminy.core:main